methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:61: error: Unmatched closing brace '}' ignored here
}
^